# sms-campaign-orchestrator

./: .gitignore  =2.2.0  AWS_DEPLOYMENT_GUIDE.md  AWS_DEPLOYMENT_QUICK_START.md  AWS_STEP_FUNCTIONS_EXECUTION.md  COMPLETION_SUMMARY.txt  CW_DASHBOARD.json  DELIVERY_MANIFEST.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LIVE_DATA_REPORT.md  LOGGING_COMPARISON.md  LOGGING_IMPROVEMENTS.md  LOGGING_SUMMARY.sh  LOGGING_TASK_COMPLETE.md  LOGGING_VERIFICATION_REPORT.md  Makefile  NETLIFE_CLIENT_IMPLEMENTATION.md  NETLIFE_CLIENT_QUICK_REFERENCE.md  OPERATIONS_FAQ.md  OPS_QUICK_START.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.txt  RELEASE_NOTES.md  SMS_Complete_nowandforeverphoto_20251031.csv  SSL_FIX_SUMMARY.sh  SSL_WARNING_FIX_COMPLETE.md  SSL_WARNING_SUPPRESSION.md  STEP_FUNCTIONS_UPDATE.md  appspec.yaml  buildspec.it.yml  buildspec.yml  campaign_output.csv  current_asl.json  diagnostic.py  dummy_jobs.json  introspect.sh  live_data_payload.json  live_data_payload_final.json  (+15 more)
.specify/memory/: constitution.md
campaign-cli/: main.py
campaign-contracts/: test_contracts.py
campaign-core/: __init__.py  contracts.py  models.py  services.py  utils.py
campaign_cli/: __init__.py  cli.py  cli_live.py  cli_live_broken.py  cli_live_original.py  main.py  pyproject.toml
campaign_cli/campaign-cli/: __init__.py  cli.py  pyproject.toml
campaign_cli/campaign-cli/campaign_cli.egg-info/: PKG-INFO  SOURCES.txt
campaign_cli/campaign_cli.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
campaign_cli/tests/cli/: test_backward_compatibility.py  test_e2e_parallel.py
campaign_contracts/: __init__.py  pyproject.toml  test_contracts.py
campaign_contracts/campaign-contracts/: __init__.py  pyproject.toml
campaign_contracts/campaign-contracts/campaign_contracts.egg-info/: PKG-INFO  SOURCES.txt
campaign_contracts/campaign_contracts.egg-info/: SOURCES.txt  requires.txt
campaign_core/: __init__.py  config.py  contracts.py  models.py  netlife_client.py  pyproject.toml  services.py  utils.py
campaign_core/adapters/: __init__.py  portals_async.py  secrets.py
campaign_core/campaign-core/: pyproject.toml
campaign_core/campaign-core/campaign_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
campaign_core/campaign_core/: config.py
campaign_core/campaign_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
campaign_core/campaign_core/adapters/: portals_async.py  secrets.py
campaign_core/tests/integration/: test_portal_s3.py
campaign_core/tests/unit/: test_parallel_determinism.py  test_retries.py
infra/: README.md
infra/envs/prod/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
infra/lambda_promote/: handler.py  package.sh
lambda_promote/: handler.py
specs/001-sms-campaign-orchestrator/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
(+24 files in other folders)
