[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campaign-contracts"
version = "0.1.0"
description = "Contract tests for SMS campaign orchestration"
authors = [{name = "SMS Quick Team"}]
dependencies = [
    "pytest>=7.0.0",
    "jsonschema>=4.0.0",
    "campaign-core>=0.1.0",
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]