[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campaign-core"
version = "0.1.0"
description = "Core library for SMS campaign orchestration"
authors = [{name = "SMS Quick Team"}]
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "structlog>=23.0.0",
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]